#bugfix horizontal scroll
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/front/workspaces/kmc/trunk@57447 6b8eccd3-e8c5-4e7d-8186-e12b5326b719

--- a/KMC/assets/kmc_skin.css
+++ b/KMC/assets/kmc_skin.css
@@ -1707,6 +1707,18 @@ border-style:solid;
 background-image:Embed(skinClass='bluebox_grad_bg');
 background-size:"100%";
 }
+VBox.blueBox1
+{
+	padding-top:10px;
+	padding-right:0px;
+	padding-bottom:10px;
+	padding-left:0px;
+	border-color:#cfd7d7;
+	border-thickness:1;
+	border-style:solid;
+	background-image:Embed(skinClass='bluebox_grad_bg');
+	background-size:"100%";
+}
 .blueBoxTitle
 {
 font-weight:bold;
